...
            "state": "translated",
            "value": "コアイメージ：%1$@、%2$@"
          }
        }
      }
    },
    "Phrases": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "フレーズ"
          }
...
            "state": "translated",
            "value": "発音を聞く"
          }
        }
      }
    },
    "Close practice": {
      "extractionState": "manual",
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "練習を閉じる"
...
            "value": "Continuous listening"
          }
        },
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "聞き流し"
          }
        }
      }
    },
    "Copy email address": {
      "extractionState": "manual",
...
            "state": "translated",
            "value": "ヘルプ・お問い合わせ"
          }
        }
      }
    },
    "Home": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Home"
...
            "state": "translated",
            "value": "IELTSとCEFR"
          }
        }
      }
    },
    "Idioms": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Idioms"
...
